Fix padding content and header gaps

--- a/src/scss/7-components/_content.scss
+++ b/src/scss/7-components/_content.scss
@@ -2,7 +2,7 @@
 
 .#{$p}-content {
   --p-section-gap: #{pxToRem(48)};
-  --p-content-gap: #{pxToRem(32)};
+  --p-content-gap: #{pxToRem(24)};
   display:flex; flex-direction:column; gap:var(--p-section-gap);
   section {
     display:flex; flex-direction:column; gap:var(--p-content-gap);
